--- a/cov.css
+++ b/cov.css
@@ -2,7 +2,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', sans-serif;
-      /* background: linear-gradient(to right, #00c4a7, #007b72); */
+      background: linear-gradient(to right, #00c4a7, #007b72);
       height: 100vh;
       display: flex;
       justify-content: center;
@@ -29,8 +29,7 @@
       background: white;
       color: #007b72;
       padding: 15px 30px;
-      font-weight: bold;
-      text-decoration: none;
+
       border-radius: 8px;
       transition: background 0.3s, transform 0.3s;
     }
@@ -40,7 +39,8 @@
       transform: scale(1.05);
     } */
 /* From Uiverse.io by cssbuttons-io */ 
-button {
+button {      font-weight: bold;
+      text-decoration: none;
  position: relative;
  border: none;
  background: transparent;
@@ -50,7 +50,11 @@ button {
  transition: filter 250ms;
  user-select: none;
  touch-action: manipulation;
+
+}
+a {
  text-decoration: none;
+ color: inherit;
 }
 
 .shadow {
